<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.Registration"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_title"
        style="@style/title"
        />

    <EditText
        android:id="@+id/edittext_registration_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/registration_username"
        style="@style/field_username"
        />

    <EditText
        android:id="@+id/edittext_registration_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/registration_password"
        style="@style/field_password"
        />

    <Button
        android:id="@+id/button_registration_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_guest"
        style="@style/button"
        />

    <Button
        android:id="@+id/button_registration_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_sign_in"
        style="@style/button"
        />

    <Button
        android:id="@+id/button_registration_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_create_account"
        style="@style/button"
        />
    <TextView
        android:id="@+id/button_registration_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/reset_password"
        android:text="@string/registration_reset_password"
        />

</LinearLayout>