<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.CreateAccount"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_title"
        style="@style/title"
        />

    <EditText
        android:id="@+id/edittext_create_account_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/create_account_username"
        style="@style/field_username"
        />

    <EditText
        android:id="@+id/edittext_create_account_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/create_account_password"
        style="@style/field_password"
        />

    <Button
        android:id="@+id/button_create_account_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_create_account"
        style="@style/button"
        />

</LinearLayout>