<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/questions_list_single_item_button"
    tools:context=".questions.QuestionsDetails"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                >
                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/placeholder_image"
                    />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_details_Title"
                style="@style/questions_details_title"
                />

            <TextView
                android:id="@+id/title"
                style="@style/questions_details_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_details_title"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_details_Description"
                style="@style/questions_details_title"
                />

            <TextView
                android:id="@+id/note"
                style="@style/questions_details_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/question_details_description"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_details_Year"
                style="@style/questions_details_title"
                />

            <TextView
                android:id="@+id/year"
                style="@style/questions_details_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_details_year"
                android:layout_marginBottom="30dp"
                />

            <Button
                android:id="@+id/start_quiz_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/button"
                android:layout_marginBottom="30dp"
                android:text="@string/question_details_button"
                />


        </LinearLayout>
    </ScrollView>
</LinearLayout>